--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "husky": "9.1.7",
     "lint-staged": "15.5.0",
     "prettier": "3.5.3",
-    "vite": "6.2.3"
+    "vite": "6.2.3",
+    "vite-plugin-inspect": "11.0.0"
   }
 }
