--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "eslint": "eslint ."
   },
   "dependencies": {
-    "collect.js": "4.36.1"
+    "@tailwindcss/postcss": "4.0.17",
+    "collect.js": "4.36.1",
+    "postcss": "8.5.3",
+    "tailwindcss": "4.0.17"
   },
   "devDependencies": {
     "@eslint/js": "9.23.0",
     "@qimijoy/prettier-config": "1.0.2",
+    "autoprefixer": "10.4.21",
     "eslint": "9.23.0",
     "eslint-config-prettier": "10.1.1",
     "eslint-plugin-jsdoc": "50.6.9",
