--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-prettier": "5.2.5",
     "globals": "16.0.0",
     "husky": "9.1.7",
+    "less": "4.2.2",
     "lint-staged": "15.5.0",
     "prettier": "3.5.3",
     "vite": "6.2.3",
