--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"],
   "compilerOptions": {
     "rootDir": ".",
     "paths": {
       "@/*": ["./src/*"],
-    }
+    },
+    "module": "es2022",
+    "lib": ["es2022", "dom"]
   }
 }
