--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "@tailwindcss/postcss": "4.0.17",
     "collect.js": "4.36.1",
     "postcss": "8.5.3",
-    "tailwindcss": "4.0.17"
+    "tailwindcss": "4.0.17",
+    "vue": "3.5.13"
   },
   "devDependencies": {
     "@eslint/js": "9.23.0",
     "@qimijoy/prettier-config": "1.0.2",
+    "@vitejs/plugin-vue": "5.2.3",
+    "@vue/tsconfig": "0.7.0",
     "autoprefixer": "10.4.21",
     "eslint": "9.23.0",
     "eslint-config-prettier": "10.1.1",
     "eslint-plugin-jsdoc": "50.6.9",
     "eslint-plugin-prettier": "5.2.5",
+    "eslint-plugin-vue": "10.0.0",
     "globals": "16.0.0",
     "husky": "9.1.7",
     "less": "4.2.2",
